--- a/HTTP-Application/Scenes/ArchiveScene.xaml
+++ b/HTTP-Application/Scenes/ArchiveScene.xaml
@@ -6,17 +6,26 @@
              xmlns:local="clr-namespace:HTTP_Application.Scenes"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel>
-        <TextBlock Height="30" Text="Archived Threads" Foreground="White" HorizontalAlignment="Center"
-                   Margin="0,10,0,0" FontSize="16"></TextBlock>
-        <ListView Background="#141414" Foreground="White" Name="ThreadList" Width="480" Height="390" ItemsSource="{Binding ArchivedThreads}">
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn HeaderContainerStyle="{StaticResource HeaderTheme}" Width="170" DisplayMemberBinding="{Binding Source}" Header="Source"/>
-                    <GridViewColumn HeaderContainerStyle="{StaticResource HeaderTheme}" Width="170" DisplayMemberBinding="{Binding Destination}" Header="Destination"/>
-                    <GridViewColumn HeaderContainerStyle="{StaticResource HeaderTheme}" Width="140" DisplayMemberBinding="{Binding Status}" Header="Status"/>
-                </GridView>
-            </ListView.View>
-        </ListView>
+    <StackPanel Orientation="Horizontal">
+        <StackPanel>
+            <TextBlock Text="Archived Threads" Foreground="White" HorizontalAlignment="Center"
+            Margin="0,15,0,0" FontSize="16" Width="122"/>
+            <ListView Height="380" Grid.Column="0" Background="#141414" Foreground="White" Name="ThreadList" ItemsSource="{Binding ArchivedThreads}" HorizontalAlignment="Center" Margin="40,10,40,0" Grid.RowSpan="2">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn HeaderContainerStyle="{StaticResource HeaderTheme}" Width="170" DisplayMemberBinding="{Binding Source}" Header="Source"/>
+                        <GridViewColumn HeaderContainerStyle="{StaticResource HeaderTheme}" Width="170" DisplayMemberBinding="{Binding Destination}" Header="Destination"/>
+                        <GridViewColumn HeaderContainerStyle="{StaticResource HeaderTheme}" Width="140" DisplayMemberBinding="{Binding Status}" Header="Status"/>
+                    </GridView>
+                </ListView.View>
+            </ListView>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal">
+            <Button Click="DeleteFile" Grid.Column="1" Grid.Row="1" Style="{StaticResource ButtonTheme}" 
+                    Height="40" Width="60" Margin="0,100,0,0" VerticalAlignment="Top" Content="Delete"></Button>
+            <Button Click="MoveFile" Grid.Column="1" Grid.Row="1" Style="{StaticResource ButtonTheme}" 
+                    Height="40" Width="60" Margin="10,100,0,0" VerticalAlignment="Top" Content="Move"></Button>
+        </StackPanel>
     </StackPanel>
+    
 </UserControl>
